button background done in login and sign up - Shreyas

--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -76,7 +76,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
-            android:background="@color/denim_blue"
+            android:background="@drawable/button_bg"
             android:onClick="registerUser"
             android:text="Sign Up"
             android:textColor="#fff"
