--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:background="@color/denim_blue"
+            android:background="@drawable/button_bg"
             android:text="Login"
             android:textColor="#fff"
             android:transitionName="button_trans" />
