Added Logout Module.

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,4 +16,7 @@
 
 
     </group>
+    <group android:checkableBehavior="single" >
+        <item android:id="@+id/logout" android:title="Logout" android:icon="@drawable/ic_logout"/>
+    </group>
 </menu>
