Added token home screen- Shreyas

--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -13,6 +13,10 @@
             android:id="@+id/nav_twitter"
             android:title="Twitter"
             android:icon="@drawable/twitter"/>
+        <item
+            android:id="@+id/nav_token"
+            android:title="Token"
+            android:icon="@drawable/ic_token"/>
 
 
     </group>
