--- a/app/src/main/res/layout/activity_token_home.xml
+++ b/app/src/main/res/layout/activity_token_home.xml
@@ -23,7 +23,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="User Name"
+            android:id="@+id/userName"
+            android:text="User"
             android:textSize="18sp"
             android:textColor="@color/black"
             android:fontFamily="@font/lexend_exa"
@@ -33,6 +34,7 @@
         <TextView
             android:layout_width="350dp"
             android:layout_height="wrap_content"
+            android:id="@+id/userDescription"
             android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
             android:textSize="14sp"
             android:textColor="@color/black"
