--- a/app/src/main/res/layout/activity_token_home.xml
+++ b/app/src/main/res/layout/activity_token_home.xml
@@ -18,8 +18,9 @@
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:layout_marginTop="40dp"
+            android:layout_marginLeft="7dp"
             android:layout_marginBottom="7dp"
-            android:src="@drawable/avater"/>
+            android:src="@drawable/logo"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
