--- a/app/src/main/res/layout/activity_create_token.xml
+++ b/app/src/main/res/layout/activity_create_token.xml
@@ -5,10 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/token_header"
-    tools:context=".tokenHome">
+    tools:context=".createToken">
+
 
     <Button
-        android:id="@+id/backButtonTokenHome"
+        android:id="@+id/backButtonCreateToken"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:background="@drawable/ic_back_btn"
@@ -31,7 +32,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/userName"
+        android:id="@+id/userNameCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|center_horizontal|center_vertical"
@@ -47,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <TextView
-        android:id="@+id/userDescription"
+        android:id="@+id/userDescriptionCreate"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center|center_horizontal|center_vertical"
@@ -60,7 +61,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userName" />
+        app:layout_constraintTop_toBottomOf="@+id/userNameCreate" />
 
     <TextView
         android:id="@+id/textView"
@@ -68,37 +69,38 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="156dp"
         android:fontFamily="@font/lexend_exa"
-        android:text="Token Number"
+        android:text="Create Token"
         android:textColor="@color/black"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/userDescriptionCreate" />
 
     <Button
-        android:id="@+id/createTokenBTN"
+        android:id="@+id/newCustomerBTN"
         android:layout_width="303dp"
         android:layout_height="60dp"
         android:layout_marginTop="64dp"
         android:backgroundTint="@color/grey"
-        android:text="Create Token"
+        android:text="New Customer"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
-        android:id="@+id/existingTokenBTN"
+        android:id="@+id/loyalCustomerBTN"
         android:layout_width="303dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginBottom="204dp"
         android:backgroundTint="@color/grey"
-        android:text="Existing Token"
+        android:text="Loyal Customer"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createTokenBTN"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/newCustomerBTN"
+        app:layout_constraintVertical_bias="0.662" />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
