--- a/app/src/main/res/layout/activity_token_dashboard.xml
+++ b/app/src/main/res/layout/activity_token_dashboard.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,13 +13,13 @@
 
         <Button
             android:id="@+id/backButtonTokenNumber"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/ic_back_btn"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="start"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
+            android:background="@drawable/ic_back_btn"
+            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -35,6 +34,7 @@
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:layout_marginTop="80dp"
+                android:layout_marginStart="30dp"
                 android:layout_gravity="top|center_horizontal"
                 android:src="@drawable/logo" />
 
@@ -154,6 +154,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_margin="5dp"
+                android:layout_marginStart="40dp"
                 android:fontFamily="@font/lexend_exa"
                 android:gravity="center|center_horizontal"
                 android:text="Products            "
