--- a/app/src/main/res/layout/activity_token_home.xml
+++ b/app/src/main/res/layout/activity_token_home.xml
@@ -17,7 +17,8 @@
         app:layout_constraintHorizontal_bias="0.029"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.017" />
+        app:layout_constraintVertical_bias="0.017"
+        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -80,7 +81,7 @@
         android:id="@+id/createTokenBTN"
         android:layout_width="303dp"
         android:layout_height="60dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="52dp"
         android:backgroundTint="@color/grey"
         android:text="Create Token"
         android:textSize="18sp"
@@ -92,7 +93,7 @@
         android:id="@+id/existingTokenBTN"
         android:layout_width="303dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="228dp"
+        android:layout_marginTop="36dp"
         android:backgroundTint="@color/grey"
         android:text="Existing Token"
         android:textSize="18sp"
@@ -100,5 +101,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createTokenBTN"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.096" />
 </androidx.constraintlayout.widget.ConstraintLayout>
